# split-contract

./: Cargo.toml  README.md
src/: contract.rs  error.rs  msg.rs  state.rs
